# py-handoff

./: MANIFEST.in  README.md  requirements.in  requirements.txt  setup.cfg  setup.py  versioneer.py
py_handoff/: __init__.py  _version.py  interface.py  main.py  utils.py
