# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[metadata]
name = py_handoff
version = 0.0.1

[versioneer]
VCS = git
style = pep440-xzp
versionfile_source = py_handoff/_version.py
versionfile_build = py_handoff/_version.py
tag_prefix =
parentdir_prefix = py_handoff

